# permve-ntnu-tdt4200

./: .gitignore  README.md
chapter_2/: permve-ntnu-tdt4200-chapter-2.tex
hello_world/: CMakeLists.txt  hello_world  hello_world.cpp  job.sh
hello_world_cpp/: CMakeLists.txt  hello_world.cpp  job.sh
problem_set_1/benchmarks/: .gitignore  CMakeLists.txt  callgrind.out.5167  log_base_e.cpp  log_base_two.cpp  log_double.cpp  log_double.txt  log_magic.cpp  sum_inverse_log_basic_double.cpp  sum_inverse_log_basic_integral.cpp  sum_inverse_log_basic_unrolled.cpp  sum_inverse_log_skip_multiples_of_two.cpp  sum_inverse_log_two_basic.cpp  sum_inverse_log_two_unrolled.cpp
problem_set_1/data/: generate_log_data  generate_report_run_time_graph  generate_sum_inverse_log_basic_profile  log_base_e.txt  log_base_two.txt  run_time_1_2_100.txt  run_time_1_2_1000000.txt  run_time_1_2_1000000000.txt  run_time_2_2_100.txt  run_time_2_2_1000000.txt  run_time_2_2_1000000000.txt  run_time_4_2_100.txt  run_time_4_2_1000000.txt  run_time_4_2_1000000000.txt  run_time_8_2_100.txt  run_time_8_2_1000000.txt  run_time_8_2_1000000000.txt  sum_inverse_log_basic.callgrind  sum_inverse_log_basic_double.callgrind  sum_inverse_log_basic_unrolled.callgrind  sum_inverse_log_two_basic.callgrind
problem_set_1/delivery/: permve_code_ps1.tar
problem_set_1/program/: .gitignore  CMakeLists.txt  computeMPI.cpp  mach2.cpp
problem_set_1/report/: permve-ntnu-tdt4200-problem-set-1.tex
problem_set_1/unit_tests/: .gitignore  CMakeLists.txt  calculate_node_indexes_factor_2.cpp  calculate_node_indexes_tests.cpp
problem_set_2/benchmark/full_warp/: Makefile  full_warp.cu
problem_set_2/data/: averages_lenna_20_32.txt  averages_lenna_384_256.txt  calculate_program_ratios.py  cuda_ratios_lenna_20_32.txt  cuda_ratios_lenna_384_256.txt  generate_lenna_run_time_graphs  lenna_20_32.txt  lenna_384_256.txt  lenna_384_256_event_measure.txt  total_ratios_lenna_20_32.txt  total_ratios_lenna_384_256.txt
problem_set_2/delivery/: Makefile  lenna.cu  permve_code_ps2.tar  permve_pinkfloyd_ps2.tar
problem_set_2/problem/lenna/: CMakeLists.txt  lenna.cu
problem_set_2/program/lenna/: lenna.cu
problem_set_2/program/lenna/20_32/: lenna.cu
problem_set_2/program/lenna/384_256/: lenna.cu
problem_set_2/program/lenna/384_256_event_measure/: .gitignore  lenna.cu
problem_set_2/program/pinkfloyd/: .gitignore  Makefile  floyd.txt  input_tdsotm.txt  pinkfloyd.cu
problem_set_2/report/: permve-ntnu-tdt4200-problem-set-2-addendum.tex  permve-ntnu-tdt4200-problem-set-2.tex
problem_set_3/program/newImageIdea/: Makefile  checker.c  gg.txt  newImageIdea  newImageIdea.cpp  newImageIdeaReference  ppm.h  times.txt
problem_set_3/program/test02/: test02.c
problem_set_3/report/: permve-ntnu-tdt4200-problem-set-3.tex
problem_set_5/input/: big_input.txt  really_big_input.txt
problem_set_5/program/: .gitignore  Makefile  bad.txt  correct_100_300.txt  i2.txt  problem_100_300.txt  pythagoreanTriplets.c
problem_set_5/scripts/: build_gcd_lut.py  crush.py  crush_mpi.py
problem_set_7/data/: time_gpu.txt  time_mpi.txt
problem_set_7/problem/handout_ps7/: Makefile
problem_set_7/program/: .gitignore  Makefile  newImageIdeaGPU.cu  newImageIdeaMPI.c  newImageIdeaOMP.c
problem_set_7/report/: permve-ntnu-tdt4200-problem-set-7.tex
templates/: assignment.tex
